# sguaba

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  PR_DESCRIPTION.md  README.md  build.rs  flake.nix
.github/: dependabot.yml
.github/workflows/: check.yml  nostd.yml  scheduled.yml  test.yml
benches/: ecef_to_geodetic.rs
examples/: enu_bearing.rs  pilot-as-engineer.rs  pilot-as-mathematician.rs  target-aquisition-and-confirmation.rs  target-confirmation.rs
src/: celestial.rs  coordinate_systems.rs  coordinates.rs  directions.rs  engineering.rs  float_math.rs  geodedic.rs  geodetic.rs  lib.rs  math.rs  std_wrappers.rs  util.rs  vectors.rs
src/snapshots/: njord__geodedic__tests__wgs_display-4.snap  njord__geodedic__tests__wgs_display-5.snap  njord__geodedic__tests__wgs_display.snap  sguaba__geodedic__tests__wgs_display-2.snap  sguaba__geodedic__tests__wgs_display-3.snap  sguaba__geodetic__tests__wgs_display-2.snap  sguaba__geodetic__tests__wgs_display-3.snap  sguaba__geodetic__tests__wgs_display-4.snap  sguaba__geodetic__tests__wgs_display-5.snap  sguaba__geodetic__tests__wgs_display.snap
