[package]
name = "sguaba"
version = "0.9.12"
edition = "2021"
license = "MIT OR Apache-2.0"

description = "Hard to misuse rigid body transforms (aka \"spatial math\") for engineers with other things to worry about than linear algebra."
repository = "https://github.com/helsing-ai/sguaba"
keywords = ["spatial", "rigid-body", "coordinates", "coordinate-systems"]
categories = ["aerospace", "mathematics"]

[features]
default = ["serde", "approx"]
serde = ["dep:serde", "nalgebra/serde-serialize", "uom/use_serde"]
approx = ["dep:approx"]

[dependencies]
approx = { version = "0.5.1", optional = true }
nalgebra = { version = "0.34.1" }
serde = { version = "1.0.215", features = ["derive"], optional = true }
typenum = "1.18.0"
uom = { version = "0.38.0", default-features = false, features = ["autoconvert", "std", "si", "f64"] }

# to make -Zminimal-versions work
[target.'cfg(any())'.dependencies]
# nav-types brings in old nalgebra, which has a broken min-dependency
nalgebra-macros = { version = "0.2.2", optional = true }

[dev-dependencies]
nav-types = "0.5.2"
rstest = "0.26.1"
serde_yaml = "0.9.34"
insta = "1.41.1"
quickcheck = "1.0.3"
