[package]
name = "sguaba"
version = "0.9.13"
edition = "2021"
license = "MIT OR Apache-2.0"

description = "Hard to misuse rigid body transforms (aka \"spatial math\") for engineers with other things to worry about than linear algebra."
repository = "https://github.com/helsing-ai/sguaba"
keywords = ["spatial", "rigid-body", "coordinates", "coordinate-systems"]
categories = ["aerospace", "mathematics"]

[features]
default = ["std", "serde", "approx"]
approx = ["dep:approx"]
libm = ["dep:libm", "nalgebra/libm"]
serde = ["dep:serde", "nalgebra/serde-serialize", "uom/use_serde"]
std = ["nalgebra/std", "uom/std", "serde/std"]

[dependencies]
approx = { version = "0.5.1", optional = true }
libm = { version = "0.2.8", optional = true }
nalgebra = { version = "0.34.1", default-features = false }
serde = { version = "1.0.215", default-features = false, features = ["derive"], optional = true }
typenum = "1.18.0"
uom = { version = "0.37.0", default-features = false, features = ["autoconvert", "si", "f64"] }

# to make -Zminimal-versions work
[target.'cfg(any())'.dependencies]
# nav-types brings in old nalgebra, which has a broken min-dependency
nalgebra-macros = { version = "0.2.2", optional = true }
# need uom::num_traits::Euclid
num-traits = { version = "0.2.18", optional = true }

[dev-dependencies]
nav-types = "0.5.2"
rstest = "0.26.1"
serde_yaml = "0.9.34"
insta = "1.41.1"
quickcheck = "1.0.3"
